--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,28 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### React App ###
+
+# dependencies
+front-end/node_modules/
+
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
