--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.ipl</groupId>
 	<artifactId>ipl-dashboard</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>ipl-dashboard</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
